# mechanics_relaxation

./: .gitignore  CMakeLists.txt  README.md
BioFVM/: BioFVM_basic_agent.h  BioFVM_microenvironment.cpp  BioFVM_solvers.cpp  CMakeLists.txt
addons/PhysiBoSS/: CMakeLists.txt
addons/PhysiMeSS/: CMakeLists.txt
addons/dFBA/: CMakeLists.txt
addons/libRoadrunner/: CMakeLists.txt
addons/libRoadrunner/src/: librr_intracellular.h
analysis/: plot_11cells_crop.py  plot_11cells_csv.py  plot_11cells_sweep-0.py  plot_11cells_sweep-1.py  plot_11cells_sweep.py  plot_time_numcells-0.py  plot_time_numcells.py
beta/: setup_windows_dep.py
core/: CMakeLists.txt  PhysiCell_cell.cpp  PhysiCell_phenotype.cpp  PhysiCell_phenotype.h  PhysiCell_standard_models.cpp
custom_modules/: custom.cpp
examples/: CMakeLists.txt
modules/: CMakeLists.txt  PhysiCell_MultiCellDS.cpp  PhysiCell_MultiCellDS.h  PhysiCell_pathology.cpp  PhysiCell_settings.cpp  PhysiCell_settings.h
results/: pc_plot_11cells.csv  pc_plot_21cells_width.csv
sample_projects/asymmetric_division/config/: PhysiCell_settings.xml
sample_projects/biorobots/: main.cpp
sample_projects/biorobots/config/: PhysiCell_settings.xml
sample_projects/cancer_biorobots/: main.cpp
sample_projects/cancer_biorobots/config/: PhysiCell_settings.xml
sample_projects/cancer_immune/: CMakeLists.txt  main-cancer_immune_3D.cpp
sample_projects/cancer_immune/config/: PhysiCell_settings.xml
sample_projects/celltypes3/: main.cpp
sample_projects/celltypes3/config/: PhysiCell_settings.xml
sample_projects/custom_division/: main.cpp
sample_projects/custom_division/config/: PhysiCell_settings.xml
sample_projects/episode/: main.cpp
sample_projects/episode/config/: PhysiCell_settings.xml
sample_projects/heterogeneity/: main.cpp
sample_projects/heterogeneity/config/: PhysiCell_settings.xml
sample_projects/immune_function/: main.cpp
sample_projects/immune_function/config/: PhysiCell_settings.xml
sample_projects/interactions/: main.cpp
sample_projects/interactions/config/: PhysiCell_settings.xml
sample_projects/mechano/: main.cpp
sample_projects/mechano/config/: PhysiCell_settings.xml
sample_projects/physimess/: CMakeLists.txt  main.cpp
sample_projects/physimess/config/: PhysiCell_settings.xml
sample_projects/pred_prey_farmer/: CMakeLists.txt
sample_projects/pred_prey_farmer/config/: PhysiCell_settings.xml
sample_projects/rules_sample/config/: PhysiCell_settings.xml
sample_projects/template/config/: PhysiCell_settings.xml
sample_projects/virus_macrophage/: main.cpp
sample_projects/virus_macrophage/config/: PhysiCell_settings.xml
sample_projects/worm/: main.cpp
sample_projects/worm/config/: PhysiCell_settings.xml
sample_projects_intracellular/boolean/cancer_invasion/: CMakeLists.txt
sample_projects_intracellular/boolean/template_BM/: CMakeLists.txt
sample_projects_intracellular/boolean/tutorial/: CMakeLists.txt
sample_projects_intracellular/fba/cancer_metabolism/: CMakeLists.txt
sample_projects_intracellular/fba/ecoli_acetic_switch/: CMakeLists.txt
sample_projects_intracellular/ode/ode_energy/: CMakeLists.txt  main.cpp
sample_projects_intracellular/ode/ode_energy/config/: PhysiCell_settings.xml
user_projects/cells11_relax/: Readme.md
user_projects/cells11_relax/config/: equilib_11cells_symm_vol2494.csv  monolayer_11cells_symm_repuls_10.xml  monolayer_11cells_symm_repuls_10_rdma_2.xml  monolayer_21cells_symm.xml  monolayer_gamma_beta_cell_area.xml  monolayer_gamma_beta_cell_area_dt_mech.xml  monolayer_gamma_beta_custom_volume-0.xml  monolayer_gamma_beta_custom_volume.xml  param_sweep_11cells-0.xml  param_sweep_11cells.xml  param_sweep_11cells_vol2494.xml  test_1000cells-0.xml  test_1000cells-1.xml  test_1000cells_vol2494_growth2.xml  test_10k_5x_slower.xml  test_11cells.xml  test_200cells-0.xml  test_200cells_vol2494.xml  test_a_i.xml  test_a_i_5x_slower.xml  test_a_i_5x_slower_dts.xml  test_a_i_5x_slower_repul_hi.xml  test_a_i_9x_slower.xml  test_area.xml  test_area_1000cells.xml  test_area_1000cells_approx_CPM.xml  test_area_1000cells_rate_slow_5x.xml  test_area_1000cells_v2.xml
user_projects/cells11_relax/custom_modules/: custom-0.cpp
user_projects/cells21_final/config/: PhysiCell_settings.xml  PhysiCell_settings_21cells.xml  equilib_21cells_symm.csv
user_projects/cells21_final/custom_modules/: custom-1.cpp  custom-10-rwh.cpp  custom-4-pre-chaste-velocity.cpp  custom-5-arrest-cycle-zero.cpp  custom-9.cpp  custom-keep-beta-gamma-0.cpp  custom-rwh-empty-velocity.cpp  custom_monolayer-0.cpp
user_projects/fix-core-nbrs-4-18-26/custom_modules/: custom_cell_area-0.cpp
user_projects/pc_force_11cells/config/: PhysiCell_settings.xml
user_projects/pc_force_11cells/custom_modules/: chaste_repulsion.py  custom-2.cpp  custom-6-weird-asymm_f_i.cpp  custom-7-works-slow.cpp  custom-rwh-1.cpp  custom-velocity.cpp  custom.cpp  custom_latest_bad_a_i_values.cpp
user_projects/pc_force_11cells_wrong/: VERSION.txt
user_projects/pc_force_11cells_wrong/config/: PhysiCell_settings.xml
user_projects/pc_force_11cells_wrong/custom_modules/: custom-pre-chaste-force.cpp  custom.cpp
user_projects/pc_std_vel_11cells/: main.cpp
user_projects/pc_std_vel_11cells/config/: PhysiCell_settings.xml  quadratic_force.xml
user_projects/pc_std_vel_11cells/custom_modules/: custom.h
user_projects/quadratic_force_11cells/config/: PhysiCell_settings.xml  test_11cells_chaste_mech.xml
user_projects/quadratic_force_11cells/custom_modules/: custom-3-bad-gamma-beta.cpp  custom-pre-arrest-fix.cpp  custom-veloctity.h  custom.cpp  custom6-partial.cpp
